--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
